--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,11 @@ jobs:
     - name: Build
       run: cargo build --verbose
 
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run unit tests
+      run: cargo test --lib --verbose
+
+    - name: Run integration tests
+      run: cargo test --test integration_test --verbose --release
 
   # 2. Loom Concurrency Model Check (Run on Linux)
   # 2. Loom 并发模型检查 (运行在 Linux 上即可)
