refactor: revert to direct platform implementation from membarrier crate
- Replace membarrier dependency with platform-specific dependencies (cfg-if, libc, ctor, windows-sys)
- Implement Linux support with direct libc syscalls for sys_membarrier with auto-registration via ctor
- Implement Windows support using FlushProcessWriteBuffers API
- Add runtime detection and fallback strategy for Linux (PRIVATE_EXPEDITED → SeqCst fence)
- Consolidate all platform implementations in sys.rs using cfg_if macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,19 @@ default = []
 loom = ["dep:loom"]
 
 [dependencies]
-# Process-wide memory barrier abstraction (handles Linux, Windows, and fallback)
-# 进程级内存屏障抽象（处理 Linux、Windows 和回退）
-membarrier = "0.2"
+cfg-if = "1.0"
+
+# --- Linux Dependencies ---
+[target.'cfg(target_os = "linux")'.dependencies]
+libc = "0.2"
+ctor = "0.6.1"
+
+# --- Windows Dependencies ---
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-sys = { version = "0.61.2", features = [
+    "Win32_System_Threading",
+    "Win32_Foundation"
+] }
 
 # --- Loom Dependencies ---
 [dependencies.loom]
