--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ libc = "0.2"
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.61.2", features = [
     "Win32_System_Threading",
+    "Win32_System_LibraryLoader",
     "Win32_Foundation"
 ] }
 
